--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,19 @@
 {
     "name": "brightlocal/api",
-    "description": "BrightLocal API wrapper and examples",
+    "description": "BrightLocal API wrapper and examples (forked to use Guzzle ~3.9 for PHP >= 5.3 compatability)",
     "minimum-stability": "stable",
     "authors": [
         {
             "name": "Ed Eliot",
             "email": "ed@brightlocal.com"
+        },
+        {
+            "name": "Edmund Kwok",
+            "email": "edmund@edmundkwok.com"
         }
     ],
     "require": {
-        "guzzlehttp/guzzle": "~4.0"
+        "guzzle/guzzle": "~3.9",
     },
     "autoload": {
         "psr-0": {
