--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require": {
-        "guzzle/guzzle": "~3.9",
+        "guzzle/guzzle": "~3.9"
     },
     "autoload": {
         "psr-0": {
