--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "brightlocal/api",
     "description": "BrightLocal API wrapper and examples (forked to use Guzzle ~3.9 for PHP >= 5.3 compatability)",
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Ed Eliot",
